# improve-basics

./: .gitignore  README.md
basic/algo/ACM_JP/book1/ch02/: 2_1_1.cxx  2_1_2.cxx  2_1_3.cxx  2_1_4_1.cxx  2_1_4_2.cxx  2_1_5.cxx  2_1_6.cxx  2_2_1.cxx  2_2_2.cxx  2_2_3.cxx  2_2_4_1.cxx  2_2_4_2.cxx  2_3_1_1.cxx  2_3_1_2.cxx  2_3_1_3.cxx  CMakeLists.txt
basic/algo/ACM_JP/book2/ch03/: CMakeLists.txt  bubble_sort.cxx  insertion_sort.cxx  selection_sort.cxx  shell_sort.cxx  stable_sort.cxx
basic/algo/ACM_JP/book2/ch05/: CMakeLists.txt  allocation.cxx  binary_search.cxx  hash_search.cxx  iterator.cxx  linear_search.cxx  lower_bound.cxx
basic/algo/ACM_JP/book2/ch07/: 1.txt  CMakeLists.txt  counting_sort.cxx  inversions.cxx  merge_sort.cxx  mimimum_cost.cxx  partiton.cxx  quick_sort.cxx  stl_sort.cxx
basic/algo/ACM_JP/book2/ch10/: CMakeLists.txt  complete_binary_tree.cxx  maximum_heap.cxx  pq.h  priority_queue.cxx  stl_priority_queue.cxx  stl_priority_queue_2.cxx
basic/algo/ACM_JP/book2/ch12/: CMakeLists.txt  bfs.cxx  connected_components.cxx  dfs_r.cxx  dfs_s.cxx  graph.cxx  graph_m.h
basic/algo/ACM_JP/book2/ch15/: CMakeLists.txt  articulation_point.cxx  build.sh  floyd.cxx  kruskal.cxx  topological_sort_bfs.cxx  topological_sort_dfs.cxx  tree_diameter.cxx
basic/algo/ACM_JP/book2/ch16/: CMakeLists.txt  geometry_object.cxx  geometry_object.h  manhattan.cxx  parallel_orthogonal.cxx  projection.cxx  reflection.cxx
basic/algo/ACM_JP/book2/ch17/: CMakeLists.txt  LIS.cxx  coin_changing.cxx  knapsack.cxx  largest_rectangle.cxx  largest_square.cxx
basic/algo/Algorithhms/ch01/: CMakeLists.txt  build.sh  ex1_1.cxx  part1_1.cxx  part1_2.cxx  part1_3.cxx  part1_4.cxx  part1_5.cxx
basic/algo/Algorithhms/ch02/: CMakeLists.txt  build.sh  part2_1.cxx  part2_2.cxx  part2_3.cxx  part2_4.cxx
basic/algo/Algorithhms/ch03/: CMakeLists.txt  part3_1.cxx  part3_2.cxx  part3_3.cxx
basic/algo/Algorithhms/common/: alg_bag.h  alg_binarysearch.h  alg_counter.h  alg_elementarysorting.h  alg_highersorting.h  alg_math.h  alg_priorityqueue.h  alg_queue.h  alg_stack.h  alg_symboltable.h  alg_unionfind.h  alg_utils.h
basic/c/ch01/: dup.c  func.c  hello.c  tempconv.c
basic/c/ch02/: ch02.c
basic/c/ch03/: 3.txt  ch03.c
basic/c/ch04/: ch04.c
basic/c/ch04/calc/: calc.h  getch.c  getop.c  main.c  stack.c
basic/c/ch05/: 2.txt  ch05.c  dcl.c
basic/c/ch06/: ch06.c  getch.c
basic/cxx/cxx20_design_patterns/ch01/: concept.cxx  crtp.cxx  dip.cxx  isp.cxx  lsp.cxx  mixin.cxx  note.md  ocp.cxx  property.cxx  srp.cxx
basic/cxx/cxx20_for_programmers/ch05/RecursiveFunction/: CMakeLists.txt  IterativeFactorial.cxx  RecursiveFactorial.cxx  RecursiveFibonacci.cxx
basic/cxx/cxx20_for_programmers/ch09/JsonData/: CMakeLists.txt  JsonData.cxx  records.json
basic/cxx/cxx20_recipes/HelloWorld/: HelloWorld.cpp  makefile
basic/cxx/cxx20_recipes/Integer/: main.cpp
basic/cxx/cxx20_recipes/LocalizationCSV/: LocalizationManager.h  main.cpp
basic/cxx/cxx20_recipes/LocalizationXML/: LocalizationManager.h  main.cpp  strings.xml
basic/cxx/cxx20_recipes/MyClass/: MyClass.cpp  makefile
basic/cxx/cxx20_recipes/TypeCast/: TypeCast.cpp  makefile
basic/cxx/cxx20_recipes/algorithm/: main.cpp
basic/cxx/cxx20_recipes/autodemo/: main.cpp
basic/cxx/cxx20_recipes/bitoperator/: main.cpp
basic/cxx/cxx20_recipes/boostdemo/: main.cpp
basic/cxx/cxx20_recipes/boostformat/: LocalizationManager.h  main.cpp  strings.xml
basic/cxx/cxx20_recipes/classdem/: main.cpp  makefile
basic/cxx/cxx20_recipes/concurrency/: main.cpp
basic/cxx/cxx20_recipes/constexprdemo/: main.cpp
basic/cxx/cxx20_recipes/containers/: main.cpp  makefile
basic/cxx/cxx20_recipes/datetimedemo/: main.cpp
basic/cxx/cxx20_recipes/inheritance/: main.cpp
basic/cxx/cxx20_recipes/initializerlist/: main.cpp
basic/cxx/cxx20_recipes/lambdademo/: main.cpp
basic/cxx/cxx20_recipes/localedemo/: main.cpp
basic/cxx/cxx20_recipes/luademo/: LuaCode2.lua  LuaCode3.lua  LuaCode4.lua  main.cpp  main.lua  makefile
basic/cxx/cxx20_recipes/memorydemo/: main.cpp  main.s  makefile
basic/cxx/cxx20_recipes/rvaluelvalue/: main.cpp
basic/cxx/cxx20_recipes/smartpointer/: main.cpp
basic/cxx/cxx20_recipes/socketdemo/: client.cpp  main.cpp  makefileC  makefileCM  makefileS  makefileSM  myprotocalclient.cpp  myprotocalserver.cpp  server.cpp
basic/cxx/cxx20_recipes/spaceshapeop/: main.cpp
basic/cxx/cxx20_recipes/stringliterals/: main.cpp  makefile
basic/cxx/cxx20_recipes/stringlocal/: LocalizationManager.h
basic/cxx/cxx20_recipes/templatedemo/: main.cpp
basic/python/dive_into_deep_learning/ch01/: ch01.ipynb
basic/python/dive_into_deep_learning/ch02/: ch02.ipynb
basic/toolchain_demo/demo/: CMakeLists.txt  main.cxx
basic/toolchain_demo/toolchains/: llvm.toolchain.cmake
basic/unix/apue/ipc/: Makefile  (+1 more)
docker/: Dockerfile  docker-compose.yml  requirements.txt  restart.sh  startup.sh
(+645 files in other folders)
